ide/code-server/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: code-server-svc
spec:
  selector:
    app: code-server
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 8080
  type: NodePort
