ide/code-server/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
    - host: code-server.server.gpg123.vip
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: code-server-svc
                port:
                  number: 8080
